# adaptive-multi-agent-chatbot

./: .env  README.md  docker-compose.yml  requirements.txt
api/: Dockerfile  pyproject.toml
api/src/: entrypoint.sh  main.py  test_prompts.json
api/src/agents/: admission_agent.py  ai_agent.py  base_agent.py  general_agent.py
api/src/rl/: bandit.py
api/src/utils/: agent_orchestrator.py  etl.py
ui/: Dockerfile  pyproject.toml
ui/src/: entrypoint.sh  streamlit_app.py
