[project]
name = "chatbot_api"
version = "0.1"
dependencies = [
    "fastapi==0.115.12",
    "pydantic==2.10.6",
    "uvicorn==0.34.0",
    "langchain==0.3.21",
    "chromadb==0.6.3",
    "langchain-community==0.3.20",
    "Wikipedia-API==0.8.1",
    "langchain-ollama==0.3.0",
    "langchain-chroma==0.2.2",
    "beautifulsoup4==4.13.3"
]

[project.optional-dependencies]
dev = ["black", "flake8"]